# cpp-verify

./: CMakeLists.txt  note.md
15OOP/: 15.1面向对象概览.md  15.2基类与派生类.md  CMakeLists.txt  oop.cpp
19.2.1dynamic_cast/: CMakeLists.txt  dynamic_cast.cpp
2.4const/: const.md
4.11type-casting/: CMakeLists.txt  const_cast.cpp  static_cast.cpp  类型转换.md
7.1ADT/: 抽象数据类型.md
about-reference/: CMakeLists.txt  pass-by-reference性能分析.md  ref.cpp
access-specifier/: CMakeLists.txt  as.cpp
auto/: auto.cpp
default-functions/: C++编译器默认生成的函数.md  CMakeLists.txt
lambda/: CMakeLists.txt  lambda.cpp
memory-problems/: CMakeLists.txt  memory-leak.cpp  memory-problems-in-cpp.md
nullptr/: nullptr.cpp
rvalue-ref&stdmove/: CMakeLists.txt  move-test-self.cpp  move-test-string.cpp  右值引用与移动语义.md
smart-pointers/: CMakeLists.txt  shared_ptr.cpp  unique_ptr.cpp
templates/: CMakeLists.txt  templates.cpp  test.cpp
templates/include/: templates.h
virtual-functions/: CMakeLists.txt  vf.cpp
